# mcp-hub

./: .env.example  .gitignore  README.md  TODO.md  main.py  main_v2.py  pyproject.toml  test_server.py
config/: settings.py
examples/: demo_collaboration.py
lib/: llm_collaboration.py
servers/: base.py  base_v2.py
tools/: aws_tools.py  github_tools.py  github_tools_v2.py
